reader breadcrumb separator alignment fix
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@22141 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content-nav.scss
+++ b/src/main/resources/scss/_content-nav.scss
@@ -25,19 +25,20 @@
 		&, * {
 			color: $tertiary-grey;
 			font: normal normal 14px/60px $font;
+			vertical-align: top;
 			overflow: hidden;
 			@include ellipse;
 			text-transform: uppercase;
 		}
 
-		span:not(.part){
-			.x-ie &,
-			.x-ie10 &,
-			.x-gecko & {
-				top: -25px;
-				position: relative;
-			}
-		}
+		//span:not(.part){
+			//.x-ie &,
+			//.x-ie10 &,
+			//.x-gecko & {
+			//	top: -25px;
+			//	position: relative;
+			//}
+		//}
 
 		span.part {
 			display: inline-block;
